# wat

./: .gitattributes  .gitignore  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts  structs.txt
buildSrc/: .gitignore  build.gradle.kts
buildSrc/src/main/antlr4/com/demonwav/wat/grammar/: WatLexer.g4  WatParser.g4
buildSrc/src/main/kotlin/: parse.kt  struct.kt  task.kt  write.kt
buildSrc/src/main/resources/com/demonwav/wat/templates/: header.ftl  impl.ftl  java.ftl  jni.ftl  jni_impl.ftl  structs.ftl
gradle/wrapper/: gradle-wrapper.properties
native/: .gitignore  CMakeLists.txt
native/cmake/: WatConfig.cmake.in  cmake_uninstall.cmake.in
native/plugin/: .gitignore  CMakeLists.txt  readme.md
native/plugin/src/: plugin.c
native/src/: exception.c  exception.h  logger.c  logger.h  marshal.c  marshal.h  util.c  util.h  uuid.c  uuid.h  wat.c  wat.h
native/src/event/: event_callbacks.h  events.c  player_join_event.c  player_join_event.h  sign_change_event.h
native/src/jni/: com_demonwav_wat_bind_NativeInit.c  com_demonwav_wat_bind_NativeLogger.c  com_demonwav_wat_event_PlayerJoinListener.c  com_demonwav_wat_event_SignChangeListener.c  jni_impl.c  uuid_jni_impl.c
src/main/java/com/demonwav/wat/: Wat.java
src/main/java/com/demonwav/wat/bind/: NativeInit.java  NativeLoader.java  NativeLocation.java  NativeLogger.java  NativePlayer.java  NativeSignChangeEvent.java  NativeUtil.java
src/main/java/com/demonwav/wat/event/: PlayerJoinListener.java  SignChangeListener.java
src/main/java/com/demonwav/wat/exception/: WatException.java
src/main/resources/: plugin.yml
